--- a/index.HTML
+++ b/index.HTML
@@ -11,7 +11,7 @@
     <meta chartset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CECOI</title>
+    <title>VóMariaFélix</title>
 
 </head>
 <body>
@@ -37,7 +37,7 @@
             <form id="U" method="POST"> 
                 <div>
                     <input type="text" id="username" name="username">
-                    <input type="submit" value="Submit" onclick="teste();">
+                    <input type="submit" value="Submit">
                 </div>
             </form>
         </section>
@@ -80,6 +80,9 @@
             <img src="img/tel.png">
             <p>Contato: <a href=mailto:(12)3966-2823>(12) 3966-2823</a></p>
         </section>
-    <input type="button" value="user" onclick="teste();">
+
+    <input type="text" id="cliente" name="cliente">
+    <input type="button" value="text" onclick="teste();">
+
 </body>
 </html>
