--- a/index.HTML
+++ b/index.HTML
@@ -24,6 +24,7 @@
                 <li><a href="#aluno" class="botao">Seja nosso aluno</a></li>
                 <li><a href="#eventos" class="botao">Projetos</a></li>
                 <img src="img/instagram-logo.png" width="75" height="75">
+                <img src="img/face-logo.png" widtt="75" height="75">
             </header>
 
         </ul>
