--- a/index.HTML
+++ b/index.HTML
@@ -3,7 +3,7 @@
 
 <head>
     <script type="text/javascript" src="scripts/user.js"></script>
-    <link rel="sortcut icon" href="img/logo.png" type="image/png" />
+    <link rel="sortcut icon" href="img/logo.jpeg" type="image/jpeg" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@1,600&family=Nunito:ital,wght@1,800&family=Yellowtail&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -20,11 +20,12 @@
         <a href="#"></a>
         <ul>
             <header>
-                <li><a href="#voluntário" class="botao">Seja voluntário</a></li>
-                <li><a href="#aluno" class="botao">Seja nosso aluno</a></li>
-                <li><a href="#eventos" class="botao">Projetos</a></li>
-                <img src="img/instagram-logo.png" width="75" height="75">
-                <img src="img/face-logo.png" widtt="75" height="75">
+                <img src="img/logo.jpeg" width="20%" height="20%">
+                <li><a href="#voluntários" class="botao">Voluntários</a></li>
+                <li><a href="#participantes" class="botao">Participantes</a></li>
+                <li><a href="#eventos" class="botao">Eventos</a></li>
+                <img src="img/instagram-logo.png" id="logo" width="75" height="75">
+                <img src="img/face-logo.png" id="logo" width="75" height="75">
             </header>
 
         </ul>
@@ -35,21 +36,25 @@
 
     <fieldset>
         <div>
-            <a href="doacao.HTML" class="doe">Doe aqui</a>
+            <a href="doacao.HTML" class="botao">Doe aqui</a>
         </div>
         <section id="sobre">
-
-            <h2>Sobre nós</h2>
+            <h1>Sobre nós</h1>
             <p>Cerca de quarenta alunos fizeram parte do ano pioneiro. Ao longo do tempo este número foi aumentando significativamente, 
             sendo que hoje a escola conta com cerca de cento e setenta alunos. No entanto, temos a ânsia de crescer ainda mais. 
             Queremos aumentar e melhorar as condições do nosso estabelecimento.
             Já iniciamos trabalhos de ampliação, e para tal temos contado com a colaboração voluntária dos pais dos nossos alunos. 
             Contudo, não temos recursos financeiros para realizar muitos dos nossos projetos e de melhorar ainda mais aquela que é a 
             segunda casa das crianças. Várias são as inscrições que recebemos anualmente, cerca de 1400.</p>
-     
         </section>
-        <section id="aluno">
-            <h2>História de uma aluna da Vó Maria Felix</h2>
+
+        <section id="voluntários">
+            <h1>Voluntários</h1>
+            <h4>Texto motivador para os voluntários</h4>
+        </section>
+
+        <section id="participantes">
+            <h1>História de uma aluna da Vó Maria Felix</h1>
             <p>Brenda Barbosa Silva começou a frequentar o Cecoi Vó Maria Felix aos 5 anos e acredita que teve sorte, pois segundo ela seus estudos foram divertidos e interessantes, considerando o local seu segundo lar, em que aprendeu a ler, escrever e também a construir o entendimento de que é fundamental o estudo e persistir nos seus objetivos. Brenda já ganhou 25 medalhas e um troféu em competições de ginástica artística e segue focada em seus objetivos, sabendo quanto a educação é importante em sua vida.
             São exemplos como esses que motivam a Vó Maria Felix, a primeira escola frequentada por uma criança tem extrema importância para jornada de aprendizagem dela. A ONG busca enriquecer a rotina de crianças com educação, apoio psicológico e assistência social, estimulando-as ao melhor desempenho próprio. </p>
         </section>
@@ -65,9 +70,31 @@
                 
                 <img src="img/" width="320" height="205">
                 <h3>Corrida das caixas foi a atividade que a professora e as educadoras fizeram para o berçário I, ajudando a aprimorar a mobilidade e coordenação motora das crianças</h3>
-                <a href="#" class="botao"> Ver mais</a>
+                <a href="ver-mais.HTML" class="botao"> Ver mais</a>
             </div>
         </section>
+
+        <section id="localizacao">
+            <fieldset>
+                <a href="img/">Aqui tem uma foto do mapa</a>
+                <br>
+                <br>
+                <div>
+                    <a href="https://goo.gl/maps/NQ99RbYZg7eiTeck6" class="botao">Localização</a>
+                </div>
+            </fieldset>
+        </section>
+
+        <section id="mantenedores">
+            <fieldset>
+                <div>
+                    <h1>Contribuidores:</h1>
+                    <p>Exemplo de Tal</p>
+                    <p>Exemplo de Tal</p>
+                </div>
+            </fieldset>
+        </section>
+
     </fieldset>
     <div>
         <section id="contato">
@@ -75,7 +102,7 @@
             <img src="img/mail.png">
             <p>E-mail: <a href=mailto:administracao@aamu.org.br>vomariafelix@cecoi.org.br</a></p>
             <img src="img/tel.png">
-            <p>Contato: <a href=mailto:(12)3966-2823>(12) 3966-2823</a></p>
+            <p>Contato: <a href=mailto:(12)91234-5678>(12) 91234-5678</a></p>
         </section>
 
     <input type="button" value="Teste" id="teste1" onclick="teste();">
