--- a/index.HTML
+++ b/index.HTML
@@ -21,8 +21,8 @@
         <ul>
             <header>
                 <img src="img/logo.jpeg" width="20%" height="20%">
-                <li><a href="#voluntários" class="botao">Voluntários</a></li>
-                <li><a href="#participantes" class="botao">Participantes</a></li>
+                <li><a href="voluntarios.HTML" class="botao">Voluntários</a></li>
+                <li><a href="participantes.HTML" class="botao">Participantes</a></li>
                 <li><a href="#eventos" class="botao">Eventos</a></li>
                 <img src="img/instagram-logo.png" id="logo" width="75" height="75">
                 <img src="img/face-logo.png" id="logo" width="75" height="75">
